--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -64,7 +64,7 @@
                                                 {% include "common/form/input_number.html" with form_input=form.loyer step="0.01" %}
                                             </td>
                                             {% if convention.statut != 'BROUILLON' %}
-                                                {% with input_id="type_stationnement_"|add:form.uuid.value object_field="type_stationnement__"|add:form.uuid.value %}
+                                                {% with input_id="type_stationnement_"|add:form.uuid.value object_field="type_stationnement__uuid__"|add:form.uuid.value %}
                                                     <td id="{{form.uuid.id_for_label}}_div">
                                                         {% include "common/comment_icon.html" with form_input=form.uuid object_field=object_field comments=comments %}
                                                         {% include "common/comment_dialog.html" with form_input=form.uuid convention=convention object_field=object_field comments=comments %}
